...
                            // <|><|><|><|><|><|>
                            // BREED GROUP <|><|>
                            // <|><|><|><|><|><|>
                            
                            if let breedGroup = dogBreed.breedGroup {
                                HStack {
                                    Text("breed group:")
                                        .foregroundColor(Color.secondary)
                                    Text(breedGroup)
                                        .foregroundColor(Color.primary)
                                }
                                .padding(.bottom)
                            }
...
                            // BRED FOR <|><|><|>
                            // <|><|><|><|><|><|>
                            
                            if let bredFor = dogBreed.bredFor {
                                if bredFor[0] != "" {
                                    VStack {
                                        Text("bred for")
                                            .foregroundColor(Color.secondary)
                                        ForEach(bredFor, id: \.self) { reason in
                                            Text(reason)
                                                .foregroundColor(Color.primary)
                                        }
                                    }
...
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(- MARK: LIFESPAN
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-
                    
                    if let lifespan = dogBreed.lifeSpan {
                        HStack {
                            Text("lifespan:")
                                .foregroundColor(Color.secondary)
                            Text(String(lifespan.lowerBound))
                            Text("-")
                                .foregroundColor(Color.secondary)
                            Text(String(lifespan.upperBound))
                            Text("(years)")
...
                    }
                    
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(- MARK: TEMPERAMENT
                    // (-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-)(-
                    
                    if let temperament = dogBreed.temperament {
                        VStack {
                            Text("temperament")
                                .font(.body)
                                .foregroundColor(Color.secondary)
                            ForEach(temperament, id: \.self) { trait in
                                Text(trait)
...
                                    
                                    // ::::::::::::::::
                                    // IF SOME ::::::::
                                    // ::::::::::::::::
                                    
                                    HStack {
                                        Text("origin:")
                                            .foregroundColor(Color.secondary)
                                        HStack(spacing: 2) {
                                            Text("[")
                                                .foregroundColor(Color.secondary)
                                            
                                            // //////////////////
...
                                HStack(alignment: .center) {
                                    
                                    // ||||||||||||||||||||
                                    // LABEL ||||||||||||||
                                    // ||||||||||||||||||||
                                    
                                    Text("height:")
                                        .foregroundColor(Color.secondary)
                                    
                                    // ||||||||||||||||||||
                                    // NUMBERS ||||||||||||
                                    // ||||||||||||||||||||
                                    
...
                                HStack(alignment: .center) {
                                    
                                    // ||||||||||||||||||||
                                    // LABEL ||||||||||||||
                                    // ||||||||||||||||||||
                                    
                                    Text("weight:")
                                        .foregroundColor(Color.secondary)
                                    
                                    // ||||||||||||||||||||
                                    // NUMBERS ||||||||||||
                                    // ||||||||||||||||||||
                                    
...
    var dogBreed: DogAPIBreed
    
    var body: some View {
        NavigationLink {
            DogBreedImagesView(dogBreed: dogBreed)
        } label: {
            Image(systemName: "photo.on.rectangle.angled")
                .font(.title3)
                .foregroundColor(Color.primary)
        }
        .buttonStyle(.bordered)
        .padding()
        .padding(.horizontal)
...
// -/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/
// PREVIEW -/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/
// -/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/

//struct DogBreedView_Previews: PreviewProvider {
//    static var previews: some View {
//        DogBreedView(dogBreed: DogAPIBreed(id: 1, name: "Affenpinscher", referenceImageId: "BJa4kxc4X"))
//    }
//}

