...
            Launcher()
        default:
            VStack {
                Text("development mode")
                    .font(.title)
                    .padding()
                Button("WIPE") { wipe(); state = 1}
                    .padding()
                Button("BOOTSTRAP") { state = 2 }
                    .padding()
                Button("LAUNCH") { state = 3 }
                    .padding()
            }
            .onAppear { printPath() }
        }
...
