...
            
            // ----------------------------------------------------------------
            // CONTENT ////////////////////////////////////////////////////////
            // ----------------------------------------------------------------
            
            Picker("", selection: $searchState) {
                Text("Search by Breed")
                    .tag(0)
                Text("Search by Trait")
                    .tag(2)
            }
            List {
                
...
