...
    @State var goSnap: Bool = false
    @State var goPatient: Bool = false
    
    @State var goPhoto: Bool = false
    @State var gonePhotoURL: URL = URL(string: "https://nikos.web.runbox.net/bootcamp/capstone/inc0a.jpg")!
    
    @State var description: String = String()
    @State var uuid: UUID = UUID()
    @State var photosPickerItem: PhotosPickerItem? = nil
    
    @State var vjotError: VJotError? = nil
    @State var vjotErrorThrown: Bool = false
    
...
            ScrollView {
                
                // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|
                // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-| MARK: TILTE
                // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|
                
                Text("jotter")
                    .foregroundColor(Color.primary)
                    .font(.largeTitle)
                    .padding()
                
                // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|
                // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-| MARK: DESCRIPTION
...
                        Button {
                            focusedDescription = false // RELEASE THE KEYBOARD
                            if incident != nil {
                                incident!.description = description
                            }
                        } label: {
                            Image(systemName: "checkmark.rectangle")
                                .foregroundColor(Color.green)
                                .font(.title3)
                        }
                        .padding(.trailing)
                        
                        // ~~~~~~~~~~~~
...
                // <:><:><:><:><:><:><:><:><:><:><:><:><:><:><:><:><:><:><:><:>
                
                Group {
                    Divider()
                        .foregroundColor(Color.primary)
                        .padding(.top, 20)
                    Text("SNAPS")
                        .foregroundColor(Color.secondary)
                        .font(.subheadline)
                        .padding(.top, 5)
                        .padding(.bottom, 15)
                }
                
...
                                        // MARKED TO DELETE BUTTON
                                        // {}{}{}{}{}{}{}{}{}{}{}{
                                        
                                        Button {
                                            ideasToDelete.append(idea)
                                        } label: {
                                            Image(systemName: "xmark.rectangle")
                                                .foregroundColor(Color.red)
                                                .font(.title3)
                                        }
                                        .padding(.leading)
                                    }
                                }
...
                            // FIELD ~~~~~`
                            // ~~~~~~~~~~~~
                            
                            
                            VStack(alignment: .trailing, spacing: 0) {
                                
                                TextField("action", text: $ideaText)
                                    .focused($focusedIdea)
                                    .textFieldStyle(.roundedBorder)
                                    .font(.body)
                                    .padding(.horizontal)
                                TextField("cost", text: $ideaCost)
                                    .keyboardType(.decimalPad)
...
                        switch emergency {
                        case true:
                            Image(systemName: colorScheme == .light ? "exclamationmark.triangle.fill" : "exclamationmark.triangle.fill")
                                .foregroundColor(colorScheme == .light ? Color.red : Color.yellow)
                                .font(.title)
                        case false:
                            Image(systemName: colorScheme == .light ? "triangle" : "triangle")
                                .foregroundColor(colorScheme == .light ? Color.yellow : Color.red)
                                .font(.title)
                        }
                        
                    }
                    .toggleStyle(.button)
...
                    // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-| MARK: PATIENTS
                    // -|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|
                    
                    Group {
                        if let incident {
                            if let patientId = incident.patientId  {
                                if let patient = patientGig.track(currentId: patientId) {
                                    
                                    // ::::::::::::::::::::::::::::::::::::::::
                                    // IF PATIENT IS ASSOCIATED WITH INCIDENT :
                                    // ::::::::::::::::::::::::::::::::::::::::
                                    
                                    Button {
...
