...
                // \/\/\/\/\/\/
                // FOOTER /\/\/
                // \/\/\/\/\/\/
                
                if let incident {
                    VStack(spacing: 0) {
                        Text("FOR INCIDENT")
                            .foregroundColor(Color.accentColor)
                            .font(.caption)
                        VStack(spacing: -8) {
                            Text(incident.date.ISO8601Format().replacingOccurrences(of: "T", with: " ").replacingOccurrences(of: "Z", with: ""))
                                .foregroundColor(Color.primary)
                                .kerning(-1)
...
