...
    // ----------------------------------------------------
    // {}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{}{} IDEAS
    // ----------------------------------------------------
    
    func appendIdea(text: String, cost: String, toIncident incident: inout Incident) throws {
        let uuid = try saveIdea(text: text, cost: cost)
        let idea: Idea = Idea(id: uuid, date: Date())
        incident.ideas.append(idea)
        try update(incident: incident)
    }
    
    func removeIdea(atOffsets indexSet: IndexSet, forIncident incident: inout Incident) throws {
        indexSet.forEach { index in
...
